Fix: Text spacing, Title

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -84,7 +84,7 @@ $text-color: #333;
 }
 
 #main-text {
-  margin: 1vw 10vw;
+  margin: 1vw 15vw;
   color: $text-color;
   display: flex;
   flex-direction: column;
