--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -90,7 +90,7 @@ body {
 }
 
 #main-text {
-  margin: 1vw 10vw;
+  margin: 1vw 15vw;
   color: #333;
   display: flex;
   flex-direction: column;
